--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                         'params' : {}
                     };
                 </script>
-                <script type="text/javascript" src="//www.highperformanceformat.com/af3ac5da264d48edf05886e0c3d572c2/invoke.js"></script>
+                <script type="text/javascript" src="//www.effectivegatecpm.com/kkhu2mdz1?key=c5e5db698888ca946a32539bfb406d71"></script>
             </center>
         </div>
         
@@ -566,7 +566,7 @@
                             'params' : {}
                         };
                     </script>
-                    <script type="text/javascript" src="//www.highperformanceformat.com/af3ac5da264d48edf05886e0c3d572c2/invoke.js"></script>
+                    <script type="text/javascript" src="//www.effectivegatecpm.com/kkhu2mdz1?key=c5e5db698888ca946a32539bfb406d71></script>
                 </center>
             </div>
             
@@ -1156,5 +1156,6 @@
     </script>
 </body>
 </html>
+
 
 
